--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -3,7 +3,7 @@
  * Copyright 2015 Drifty Co.
  * http://drifty.com/
  *
- * Ionic, v1.3.2
+ * Ionic, v1.3.1
  * A powerful HTML5 mobile app framework.
  * http://ionicframework.com/
  *
@@ -9662,7 +9662,12 @@ a.button {
 .slide-in-up > .ng-leave {
   -webkit-transition: all ease-in-out 250ms;
   transition: all ease-in-out 250ms; }
+.item-avatar-self img{
 
+    max-width: 100px!important;
+    max-height: 100px!important;
+
+}
 @-webkit-keyframes scaleOut {
   from {
     -webkit-transform: scale(1);
