--- a/www/templates/post-confirm.html
+++ b/www/templates/post-confirm.html
@@ -18,12 +18,12 @@
     <img ng-show="picture !== undefined" ng-src="{{picture}}" width="300" height="300" style="display:block; margin:auto;">
     <img ng-show="picture === undefined" ng-src="http://placehold.it/300x300" style="display:block; margin:auto; ">
     <br><br><br><br><br>
-    <button class="button button-balanced" style="float:left; margin-left: 18%;" ng-click="takePhoto()">Take Picture</button>
-    <button class="button button-balanced" style="margin-left: 5%;" ng-click="choosePhoto()">Choose Picture</button>
-    <br><br><br>
-    <button class="button button-full button-balanced"  ng-click="confirmPost()">Confirm</button>
     
-</ion-content>
+    <ion-item ng-controller="PostConfirmCtrl">
+    <input type="text" placeholder="Write something here..." ng-model="caption">
+    <button class="button button-full button-balanced"  ng-click="confirmPost(caption)">Confirm</button>
+    </ion-item>
+
 
   </body>
 </html>
