--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,15 +1,45 @@
 <ion-view title="Profile" id="page6">
-  <ion-content padding="true" class="has-header">
-    <ion-list id="profile-list7" ng-show="posts">
-      <ion-item class="item-avatar balanced" id="profile-list-item18">
-        <img ng-src="{{posts[0].avatar}}">
-        <h2balanced>{{posts[0].name}}</h2balanced>
-      </ion-item>
-      <label class="item item-input" id="profile-textarea1" name="caption">
-        <span class="input-label">This is my details and bio></span><textarea placeholder=""></textarea></label>
+  <ion-content padding="true" class="has-header has-tabs">
+    <ion-list id="profile-list7">
+      <div class="row">
+            <div class="col col-33 item-avatar item-avatar-self balanced">
+                <img ng-src="{{user.avatar}}" width="100px" height="100px"/><br>
+            </div>
+       <div class="col col-66 center">
+                <div class="row">
+                    <div class="col col-33">
+                        <b>{{user.posts}}</b><br />
+                        <p>posts</p>
+                    </div>
+                    <div class="col col-33">
+                        <b>{{user.followers}}</b><br />
+                        <p>followers</p>
+                    </div>
+                    <div class="col col-33">
+                        <b>{{user.following}}</b><br />
+                        <p>following</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <a class="button bar-stable edit-button full-width" style="color:green; background-color: #d3d3d3" href="#/tab/edit">
+                        EDIT YOUR PROFILE
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin-bottom:10px; margin-left: 15px;">
+            <b>{{user.name}}</b>
+        </div>
+        <hr/>
+      <label class="row" id="profile-textarea1" name="bio">
+        <span>{{user.bio}}</span></label>
+        <hr/>
     </ion-list>
+
     <ion-list>
-    <img ng-repeat = "post in posts" ng-src='{{post.img}}' width="50%" height="50%" />
+<div class="row">
+  <div class="col col-33">
+    <img ng-src="{{post.img}}" width="100%" height="100%" />
     </ion-list>
   </ion-content>
 </ion-view>
