--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -5,8 +5,8 @@
         <i class="icon ion-search placeholder-icon"></i>
         <input type="search" placeholder="search" ng-model="searchQuery"/>
       </label>
-      <div class="list card" id="search-card27">
-        <ion-item class="item-avatar" id="search-list-item26" ui-sref="tabsController.searchprofile({id: {{user.id}}})" ng-repeat="user in userList | filter: searchQuery">
+      <div class="list card" id="search-card27" ng-repeat="user in userList | filter: searchQuery">
+        <ion-item class="item-avatar" id="search-list-item26" ng-click="search({{user.id}})">
           {{user.name}}
           <img ng-src='{{user.avatar}}' />
         </ion-item>
