--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -1,9 +1,9 @@
-<ion-view hide-nav-bar="true" id="page1" style="background-color:#4891E0;">
+<ion-view hide-nav-bar="false" id="page1" style="background-color:#4891E0;">
   <ion-tabs class="tabs-stable tabs-icon-only" id="tabsController-tabs1">
     <ion-tab title="Camera Tab" icon="ion-ios-camera" ui-sref="tabsController.camera" id="tabsController-tab1">
       <ion-nav-view name="tab1"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Home" icon="ion-ios-home" ui-sref="tabsController.home" id="tabsController-tab4">
+    <ion-tab title="Home" icon="ion-android-home" ui-sref="tabsController.home" id="tabsController-tab4">
       <ion-nav-view name="tab4"></ion-nav-view>
     </ion-tab>
     <ion-tab title="Profile" icon="ion-ios-person" ui-sref="tabsController.profile" id="tabsController-tab5">
